; ModuleID = '/home/carl/AnghaBench/memcached/extr_items.c_stop_lru_maintainer_thread.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_items.c_stop_lru_maintainer_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@lru_maintainer_lock = common dso_local global i32 0, align 4
@do_run_lru_maintainer_thread = common dso_local global i64 0, align 8
@lru_maintainer_tid = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"Failed to stop LRU maintainer thread: %s\0A\00", align 1
@settings = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @stop_lru_maintainer_thread() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @pthread_mutex_lock(i32* @lru_maintainer_lock)
  store i64 0, i64* @do_run_lru_maintainer_thread, align 8
  %4 = call i32 @pthread_mutex_unlock(i32* @lru_maintainer_lock)
  %5 = load i32, i32* @lru_maintainer_tid, align 4
  %6 = call i32 @pthread_join(i32 %5, i32* null)
  store i32 %6, i32* %2, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %0
  %9 = load i32, i32* @stderr, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i8* @strerror(i32 %10)
  %12 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i8* %11)
  store i32 -1, i32* %1, align 4
  br label %14

13:                                               ; preds = %0
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @settings, i32 0, i32 0), align 4
  store i32 0, i32* %1, align 4
  br label %14

14:                                               ; preds = %13, %8
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1

declare dso_local i32 @pthread_join(i32, i32*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
